--- a/lab11/Feeder27/app/build.gradle
+++ b/lab11/Feeder27/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     testCompile 'junit:junit:4.12'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
