--- a/lab11/Feeder27/app/src/main/AndroidManifest.xml
+++ b/lab11/Feeder27/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".FeedbackForm"></activity>
     </application>
 
 </manifest>
