--- a/lab11/Feeder27/app/build.gradle
+++ b/lab11/Feeder27/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -29,7 +30,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
+    compile 'com.android.support:recyclerview-v7:25.0.0-rc1'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
