Assignment Activity done

--- a/lab11/Feeder27/app/src/main/AndroidManifest.xml
+++ b/lab11/Feeder27/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme" />
-        <activity android:name=".FeedbackForm"></activity>
+        <activity android:name=".FeedbackForm" />
+        <activity android:name=".AssignmentActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
     </application>
 
 </manifest>
